--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="course-grid">
                 <div class="course-card">
                     <h3>Business Case Courses</h3>
-                    <ul>
+                    <ul class="checklist">
                         <li>Pemahaman dasar mengenai Business Case serta cara menyusun Executive Summary yang efektif</li>
                         <li>Cara menganalisis masalah menggunakan kerangka seperti SCQ, Issue Tree, 5 Why, dan prinsip MECE</li>
                         <li>Teknik membuat analisis menggunakan PESTEL, Porter’s 5 Forces, McKinsey 7S, dan framework serupa lainnya</li>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="course-card">
                     <h3>Business Plan Courses</h3>
-                    <ul>
+                    <ul class="checklist">
                         <li>Pengenalan Business Plan serta strategi merumuskan ide bisnis yang solid</li>
                         <li>Tips menyusun Proposal Business Plan yang disukai dan mudah dipahami oleh juri</li>
                         <li>Penyusunan analisis model bisnis, ukuran pasar, user persona,  strategi 5P, AIDA Marketing, dan strategi go-to-market</li>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="course-card">
                     <h3>Business Pitching Courses</h3>
-                    <ul>
+                    <ul class="checklist">
                         <li>Pendalaman teknik public speaking agar penyampaian ide lebih meyakinkan</li>
                         <li>Cara membangun struktur pitching yang kuat mulai dari opening, storytelling, hingga closing yang impactful</li>
                         <li>Pelatihan body language dan posture supaya peserta tampil percaya diri</li>
@@ -158,4 +158,5 @@
             }
         </script>
     </body>
+
 </html>
